fixed socket sending message

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ ACCESS_EXPIRE_IN=7200
 REFRESH_SECRET=uio3789fhajishfl
 REFRESH_EXPIRE_IN=604800
 
-REDIS_URL=redis://redis:6379
+REDIS_URL=redis://localhost:6379
 
-DATABASE_URL=postgresql://postgres:123456@database:5432/chat?schema=public
+DATABASE_URL=postgresql://postgres:123456@localhost:5432/chat?schema=public
