--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.4.5",
     "@nestjs/platform-socket.io": "^8.4.5",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/websockets": "^8.4.5",
@@ -40,6 +41,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "fastify-swagger": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
